# cmake_example

01/: CMakeLists.txt  main.c
01/inc/: example_lib.h
02/: CMakeLists.txt  main.c  version.h.in
